# Split-Infer-MCUs

./: .gitignore  Split_Infer.code-workspace  platformio.ini
Coordinator/: .gitignore  main.py  pyproject.toml
Coordinator/src/: coordniator.py  model_config.json  protocol.py  task_queue.py  work_manager.py
Coordinator/tests/: test_coordinator_core.py
Download/: MCU_DEPLOYMENT.md  Split_Infer.code-workspace
Download/include/: quant_params.h
Download/src/: main.cpp
Download/test/: test_weights.cpp
Worker/: .gitignore  deploy.sh  platformio.ini  pre_build_worker.py
Worker/include/conv/: conv2d.h  conv2d_test_data.h
Worker/include/linear/: linear.h
Worker/lib/conv/: conv2d.cpp  conv2d_test_data.h
Worker/lib/linear/: linear.cpp  linear_test_data.h
Worker/lib/protocol/: protocol.h
Worker/src/: main.cpp  protocol.h  worker.cpp  worker.h
Worker/src/conv/: conv2d.cpp
Worker/src/linear/: linear.cpp
Worker/test/: test_conv_layer.cpp
Worker/test/test_conv_layer/: test_conv_layer.cpp
Worker/test/test_dma/: test_dma.cpp
Worker/test/test_linear_layer/: test_linear_layer.cpp
include/: layer_config.h  quant_params.h
src/: main.cpp
test/: test_weights.cpp
